--- a/css/style.css
+++ b/css/style.css
@@ -1244,11 +1244,11 @@ blockquote::after{
 
 
 .stat-eyecolor .color-display {
-  background-color:#6ca6dc;
+  background-color:#916004;
 }
 
 .stat-haircolor .color-display {
-  background-color:#967910;
+  background-color:#302a09;
 }
 .color-display {
   margin:10px auto;
